# tp5_prueba

tp5_enviroment/: pyvenv.cfg
tp5_enviroment/Punto_map/: sorted_table_map.py  sorted_table_map_client.py
tp5_enviroment/Punto_villanos/: Personaje.py  main.py
tp5_enviroment/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  pyproject.toml
tp5_enviroment/src/Punto_map/: sorted_table_map.py  sorted_table_map_abstract.py  sorted_table_map_client.py
tp5_enviroment/src/Punto_villanos/: Personaje.py  main.py
